# AdventureFlight

./: AdventureFlightGame.cpp  AdventureFlightGame.h  AdventureFlightSettings.cpp  AdventureFlightSettings.h  Aircraft.cpp  Aircraft.h  CMakeLists.txt  Constants.h  CoordinateManager.cpp  CoordinateManager.h  FuelGenerator.cpp  FuelGenerator.h  GameManager.cpp  GameManager.h  GeoCoordinate.cpp  GeoCoordinate.h  JSONConverters.h  TripLeg.cpp  TripLeg.h  main.cpp
